k8s/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  clusterIP: None   # Headless Service
  ports:
    - port: 3306
      name: mysql
  selector:
    app: mysql
